# stilltent

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  DEPLOY.md  EXPLANATION.md  Makefile  README.md  docker-compose.yml  integration-test.txt  stilltent.yml
project/: .gitignore  ARCHITECTURE.md  ARCHITECTURE_TODO.md  ITERATION_11.md  ITERATION_12.md  ITERATION_14.md  ITERATION_22_SUMMARY.md  ITERATION_24_SUMMARY.md  Makefile  README.md  coverage.html  coverage.out  go.mod  go.sum  iteration_10_summary.json  iteration_26_summary.json  iteration_27_summary.json  iteration_29_plan.md  iteration_29_summary.json  iteration_29_summary.md  iteration_30_result.json  iteration_30_summary.md  iteration_31_plan.md  iteration_41_summary.json  network.cover  overall.cover  pyproject.toml  ruff.toml  tent
project/.github/workflows/: ci.yml
project/cmd/tent/: api.go  audit.go  checkpoint.go  cli_test.go  (+57 more)
project/cmd/tent-agent/: main.go
project/memory/: 2025-03-21.md  2026-03-21.md  ARCHITECTURE.md  DAILY.md  IMPROVEMENT_QUEUE.md  IT1.md  ITERATION_1.md  QUALITY.md  REPO_STATE.md  SPEC_SUMMARY.md  mem-architectural-decision.md  mem-bootstrap-complete.md  mem-complete.md  mem-completed.md  mem-conclusion.md  mem-done.md  mem-first.md  mem-improvement-queue.md  mem-iteration-1.md  mem-iteration-log.md  mem-iteration.md  mem-log.md  mem-next-steps.md  mem-result.md  mem-spec-summary.md  mem-status.md  summary.md
project/mytool/: __init__.py  cli.py  core.py
project/testdata/: sample-config.yaml  sample-state.json
project/tests/: conftest.py  test_cli.py  test_core.py
(+316 files in other folders)
