[project]
name = "mytool"
version = "0.1.0"
description = "A command-line tool for managing local development environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mytool = "mytool.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mytool*"]
